# Neetwork

./: .gitignore  CMakeLists.txt
src/: activation.cpp  activation.hpp  containers.cpp  containers.hpp  cost.cpp  cost.hpp  main.cpp  network.hpp  network.tpp
